<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.subtrack.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.subtrack.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_view"
        android:name="com.example.subtrack.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.subtrack.ui.create.CreateSubscriptionFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create_subscription" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.example.subtrack.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.subtrack.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>